--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -50,5 +50,35 @@
         }
       }
     }
+
+    .home-search-bar-container {
+      height: 70vh;
+      @include flex-center;
+      form {
+        width: 65%;
+        position: relative;
+        input {
+          width: 100%;
+          height: 40px;
+          display: block;
+          border-radius: 25px;
+          padding-left: 20px;
+          padding-right: 40px;
+          font-size: 14px;
+          color: #777;
+          border: none;
+          outline: none;
+        }
+        .search-icon-container {
+          position: absolute;
+          right: 0;
+          top: 0;
+          height: 40px;
+          width: 40px;
+          cursor: pointer;
+          @include flex-center;
+        }
+      }
+    }
   }
 }
